# Oppo2026

./: .env.example  .gitignore  Dockerfile  README.md  apidebugupdate.txt  docker-compose.yml  pyproject.toml
a2a_host/: __init__.py  a2a_protocol.py  auth.py  config.py  server.py
a2a_host/routers/: __init__.py  opposition.py
analysis/: __init__.py  contradiction_detector.py  decision_engine.py  disinformation_analyzer.py  evasion_detector.py  fact_checker.py  llm_interface.py  report_generator.py
data_collection/: __init__.py  scheduler.py
data_collection/crawlers/: __init__.py  ballotpedia_crawler.py  campaign_website_crawler.py  congress_crawler.py  fec_crawler.py  house_press_crawler.py  opensecrets_crawler.py
data_collection/processors/: __init__.py  ballotpedia_processor.py  campaign_website_processor.py  congress_processor.py  fec_processor.py  house_press_processor.py  opensecrets_processor.py
database/: __init__.py  data_models.py  modern_context_protocol.py  neo4j_client.py
listeners/: __init__.py  listener_manager.py  telegram_listener.py  youtube_listener.py
scripts/: __init__.py  gop_youtube.csv  ingest_candidates_csv.py
tests/: __init__.py  test_a2a_host.py  test_analysis.py  test_data_collection.py  test_database.py  test_listeners.py
